--- a/environment.yml
+++ b/environment.yml
@@ -4,90 +4,90 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - appnope=0.1.3=pyhd8ed1ab_0
-  - asttokens=2.1.0=pyhd8ed1ab_0
-  - backcall=0.2.0=pyh9f0ad1d_0
-  - backports=1.0=py_2
-  - backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-  - brotli=1.0.9=hb7f2c08_8
-  - brotli-bin=1.0.9=hb7f2c08_8
-  - bzip2=1.0.8=h0d85af4_4
-  - ca-certificates=2023.08.22=hecd8cb5_0
-  - charset-normalizer=2.1.1=pyhd8ed1ab_0
-  - cycler=0.11.0=pyhd8ed1ab_0
-  - decorator=5.1.1=pyhd8ed1ab_0
-  - executing=1.2.0=pyhd8ed1ab_0
-  - fastkml=0.12=pyhd8ed1ab_0
-  - freetype=2.12.1=h3f81eb7_0
-  - icu=70.1=h96cf925_0
-  - idna=3.4=pyhd8ed1ab_0
-  - ipython=8.6.0=pyhd1c38e8_1
-  - jedi=0.18.1=pyhd8ed1ab_2
-  - jpeg=9e=hac89ed1_2
-  - lcms2=2.14=h90f4b2a_0
-  - lerc=4.0.0=hb486fe8_0
-  - libblas=3.9.0=16_osx64_openblas
-  - libbrotlicommon=1.0.9=hb7f2c08_8
-  - libbrotlidec=1.0.9=hb7f2c08_8
-  - libbrotlienc=1.0.9=hb7f2c08_8
-  - libcblas=3.9.0=16_osx64_openblas
-  - libcxx=14.0.6=hccf4f1f_0
-  - libdeflate=1.14=hb7f2c08_0
-  - libffi=3.4.2=h0d85af4_5
-  - libgfortran=5.0.0=9_5_0_h97931a8_26
-  - libgfortran5=11.3.0=h082f757_26
-  - libiconv=1.17=hac89ed1_0
-  - liblapack=3.9.0=16_osx64_openblas
-  - libllvm11=11.1.0=h8fb7429_5
-  - libopenblas=0.3.21=openmp_h429af6e_3
-  - libpng=1.6.38=ha978bb4_0
-  - libsqlite=3.40.0=ha978bb4_0
-  - libtiff=4.4.0=hdb44e8a_4
-  - libwebp-base=1.2.4=h775f41a_0
-  - libxcb=1.13=h0d85af4_1004
-  - libxml2=2.10.3=hb9e07b5_0
-  - libxslt=1.1.37=h5d22bc9_0
-  - libzlib=1.2.13=hfd90126_4
-  - llvm-openmp=15.0.5=h61d9ccf_0
-  - matplotlib-base=3.6.2=py310he725631_0
-  - matplotlib-inline=0.1.6=pyhd8ed1ab_0
-  - munkres=1.1.4=pyh9f0ad1d_0
-  - ncurses=6.3=h96cf925_1
-  - openjpeg=2.5.0=h5d0d7b0_1
-  - openssl=3.0.12=hca72f7f_0
-  - packaging=21.3=pyhd8ed1ab_0
-  - parso=0.8.3=pyhd8ed1ab_0
-  - pexpect=4.8.0=pyh1a96a4e_2
-  - pickleshare=0.7.5=py_1003
-  - pip=22.3.1=pyhd8ed1ab_0
-  - prompt-toolkit=3.0.32=pyha770c72_0
-  - pthread-stubs=0.4=hc929b4f_1001
-  - ptyprocess=0.7.0=pyhd3deb0d_0
-  - pure_eval=0.2.2=pyhd8ed1ab_0
-  - pycparser=2.21=pyhd8ed1ab_0
-  - pygeoif=0.7=py_1
-  - pygments=2.13.0=pyhd8ed1ab_0
-  - pyopenssl=22.1.0=pyhd8ed1ab_0
-  - pyparsing=3.0.9=pyhd8ed1ab_0
-  - pysocks=1.7.1=pyha2e5f31_6
-  - python=3.10.6=hc14f532_0_cpython
-  - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python_abi=3.10=2_cp310
-  - readline=8.1.2=h3899abd_0
-  - requests=2.28.1=pyhd8ed1ab_1
-  - setuptools=65.5.1=pyhd8ed1ab_0
-  - six=1.16.0=pyh6c4a22f_0
-  - stack_data=0.6.1=pyhd8ed1ab_0
-  - tk=8.6.12=h5dbffcc_0
-  - traitlets=5.5.0=pyhd8ed1ab_0
-  - tzdata=2022f=h191b570_0
-  - urllib3=1.26.11=pyhd8ed1ab_0
-  - wcwidth=0.2.5=pyh9f0ad1d_2
-  - wheel=0.38.4=pyhd8ed1ab_0
-  - xorg-libxau=1.0.9=h35c211d_0
-  - xorg-libxdmcp=1.1.3=h35c211d_0
-  - xz=5.2.6=h775f41a_0
-  - zstd=1.5.2=hfa58983_4
+  - appnope=0.1.3
+  - asttokens=2.1.0
+  - backcall=0.2.0
+  - backports=1.0
+  - backports.functools_lru_cache
+  - brotli=1.0.9
+  - brotli-bin=1.0.9
+  - bzip2=1.0.8
+  - ca-certificates=2023.08.22
+  - charset-normalizer=2.1.1
+  - cycler=0.11.0
+  - decorator=5.1.1
+  - executing=1.2.0
+  - fastkml=0.12
+  - freetype=2.12.1
+  - icu=70.1
+  - idna=3.4
+  - ipython=8.6.0
+  - jedi=0.18.1
+  - jpeg=9e
+  - lcms2=2.14
+  - lerc=4.0.0
+  - libblas=3.9.0
+  - libbrotlicommon=1.0.9
+  - libbrotlidec=1.0.9
+  - libbrotlienc=1.0.9
+  - libcblas=3.9.0
+  - libcxx=14.0.6
+  - libdeflate=1.14
+  - libffi=3.4.2
+  - libgfortran=5.0.0
+  - libgfortran5=11.3.0
+  - libiconv=1.17
+  - liblapack=3.9.0
+  - libllvm11=11.1.0
+  - libopenblas=0.3.21
+  - libpng=1.6.38
+  - libsqlite=3.40.0
+  - libtiff=4.4.0
+  - libwebp-base=1.2.4
+  - libxcb=1.13
+  - libxml2=2.10.3
+  - libxslt=1.1.37
+  - libzlib=1.2.13
+  - llvm-openmp=15.0.5
+  - matplotlib-base=3.6.2
+  - matplotlib-inline=0.1.6
+  - munkres=1.1.4
+  - ncurses=6.3
+  - openjpeg=2.5.0
+  - openssl=3.0.12
+  - packaging=21.3
+  - parso=0.8.3
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
+  - pip=22.3.1
+  - prompt-toolkit=3.0.32
+  - pthread-stubs=0.4
+  - ptyprocess=0.7.0
+  - pure_eval=0.2.2
+  - pycparser=2.21
+  - pygeoif=0.7
+  - pygments=2.13.0
+  - pyopenssl=22.1.0
+  - pyparsing=3.0.9
+  - pysocks=1.7.1
+  - python=3.10.6
+  - python-dateutil=2.8.2
+  - python_abi=3.10
+  - readline=8.1.2
+  - requests=2.28.1
+  - setuptools=65.5.1
+  - six=1.16.0
+  - stack_data=0.6.1
+  - tk=8.6.12
+  - traitlets=5.5.0
+  - tzdata=2022f
+  - urllib3=1.26.11
+  - wcwidth=0.2.5
+  - wheel=0.38.4
+  - xorg-libxau=1.0.9
+  - xorg-libxdmcp=1.1.3
+  - xz=5.2.6
+  - zstd=1.5.2
   - brotlipy==0.7.0
   - certifi==2023.11.17
   - cffi==1.15.1
