--- a/environment.yml
+++ b/environment.yml
@@ -1,109 +1,12 @@
 name: nbls
 channels:
-  - anaconda
   - conda-forge
   - defaults
 dependencies:
-  - appnope=0.1.3
-  - asttokens=2.1.0
-  - backcall=0.2.0
-  - backports=1.0
-  - backports.functools_lru_cache
-  - brotli=1.0.9
-  - brotli-bin=1.0.9
-  - bzip2=1.0.8
-  - ca-certificates=2023.08.22
-  - charset-normalizer=2.1.1
-  - cycler=0.11.0
-  - decorator=5.1.1
-  - executing=1.2.0
-  - fastkml=0.12
-  - freetype=2.12.1
-  - icu=70.1
-  - idna=3.4
-  - ipython=8.6.0
-  - jedi=0.18.1
-  - jpeg=9e
-  - lcms2=2.14
-  - lerc=4.0.0
-  - libblas=3.9.0
-  - libbrotlicommon=1.0.9
-  - libbrotlidec=1.0.9
-  - libbrotlienc=1.0.9
-  - libcblas=3.9.0
-  - libcxx=14.0.6
-  - libdeflate=1.14
-  - libffi=3.4.2
-  - libgfortran=5.0.0
-  - libgfortran5=11.3.0
-  - libiconv=1.17
-  - liblapack=3.9.0
-  - libllvm11=11.1.0
-  - libopenblas=0.3.21
-  - libpng=1.6.38
-  - libsqlite=3.40.0
-  - libtiff=4.4.0
-  - libwebp-base=1.2.4
-  - libxcb=1.13
-  - libxml2=2.10.3
-  - libxslt=1.1.37
-  - libzlib=1.2.13
-  - llvm-openmp=15.0.5
-  - matplotlib-base=3.6.2
-  - matplotlib-inline=0.1.6
-  - munkres=1.1.4
-  - ncurses=6.3
-  - openjpeg=2.5.0
-  - openssl=3.0.12
-  - packaging=21.3
-  - parso=0.8.3
-  - pexpect=4.8.0
-  - pickleshare=0.7.5
-  - pip=22.3.1
-  - prompt-toolkit=3.0.32
-  - pthread-stubs=0.4
-  - ptyprocess=0.7.0
-  - pure_eval=0.2.2
-  - pycparser=2.21
-  - pygeoif=0.7
-  - pygments=2.13.0
-  - pyopenssl=22.1.0
-  - pyparsing=3.0.9
-  - pysocks=1.7.1
-  - python=3.10.6
-  - python-dateutil=2.8.2
-  - python_abi=3.10
-  - readline=8.1.2
-  - requests=2.28.1
-  - setuptools=65.5.1
-  - six=1.16.0
-  - stack_data=0.6.1
-  - tk=8.6.12
-  - traitlets=5.5.0
-  - tzdata=2022f
-  - urllib3=1.26.11
-  - wcwidth=0.2.5
-  - wheel=0.38.4
-  - xorg-libxau=1.0.9
-  - xorg-libxdmcp=1.1.3
-  - xz=5.2.6
-  - zstd=1.5.2
-  - brotlipy==0.7.0
-  - certifi==2023.11.17
-  - cffi==1.15.1
-  - contourpy==1.0.6
-  - cryptography==38.0.3
-  - fonttools==4.38.0
-  - greenlet==2.0.1
-  - joblib==1.2.0
-  - kiwisolver==1.4.4
-  - llvmlite==0.39.1
-  - lxml==4.9.1
-  - matplotlib==3.6.2
-  - numba==0.56.3
-  - numpy==1.23.4
-  - obspy==1.3.1
-  - pillow==9.2.0
-  - scipy==1.9.3
-  - sqlalchemy==1.4.44
-  - unicodedata2==15.0.0
+  - python<3.11  
+  - fastkml
+  - ipython
+  - obspy
+  - numba
+  - joblib
+  - pip
